--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="qLayout"
-            type="kg.nurzhamal.quizapp.QuestionViewModel" />
+            type="kg.kurmanjan.quizapp.QuestionViewModel" />
 
     </data>
 
@@ -18,7 +18,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".QuestionsActivity">
+        tools:context="kg.kurmanjan.quizapp.QuestionsActivity">
 
         <ImageView
             android:id="@+id/back_iv"
