--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.history.HistoryFragment">
+        tools:context="kg.kurmanjan.quizapp.ui.history.HistoryFragment">
 
         <TextView
             android:id="@+id/history_category2"
